kube/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: merlin-sessions-api-dev
  namespace: default
  labels:
    app: merlin-sessions-api-dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: merlin-sessions-api-dev
  template:
    metadata:
      labels:
        app: merlin-sessions-api-dev
    spec:
      containers:
        - name: merlin-sessions-api-dev
          image: 592636539130.dkr.ecr.us-east-1.amazonaws.com/merline-sessions:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 250m
            limits:
              cpu: 1
          ports:
          - containerPort: 3535
          volumeMounts:
          - name: merlin-sessions-api-dev-config-volume
            mountPath: /app/.env
            subPath: .env
      volumes:
        - name: merlin-sessions-api-dev-config-volume
          configMap:
            name: merlin-sessions-api-dev-config
