kube/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: merlin-sessions-api-dev-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: merlin-sessions-api-dev
  ports:
    - name: main
      port: 8080
      targetPort: 8080
      protocol: TCP
